--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
 div{
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     align-items: center;
     justify-content: center;
+    font-family: "Stoke", serif;
+    font-weight: 300;
+}
+
+
+body {
+    background-color: rgb(211, 255, 255);
 }
